exports[`test should render the titlebar correctly 1`] = `
<table
  className="issue-table">
  <tbody>
    <tr>
      <td>
        <IssueMessage
          message="Reduce the number of conditional operators (4) used in the expression"
          organization="myorg"
          rule="javascript:S1067" />
      </td>
      <td
        className="issue-table-meta-cell issue-table-meta-cell-first">
        <ul
          className="list-inline issue-meta-list">
          <li
            className="issue-meta">
            <IssueChangelog
              creationDate="2017-03-01T09:36:01+0100"
              isOpen={false}
              issue={
                Object {
                  "creationDate": "2017-03-01T09:36:01+0100",
                  "key": "AVsae-CQS-9G3txfbFN2",
                  "line": 26,
                  "message": "Reduce the number of conditional operators (4) used in the expression",
                  "organization": "myorg",
                  "rule": "javascript:S1067",
                }
              }
              onFail={[Function]}
              togglePopup={[Function]} />
          </li>
          <li
            className="issue-meta">
            <span
              className="issue-meta-label"
              title="line_number">
              L
              26
            </span>
          </li>
          <li
            className="issue-meta">
            <a
              className="js-issue-permalink icon-link"
              href="/issues/search#issues=AVsae-CQS-9G3txfbFN2"
              target="_blank" />
          </li>
        </ul>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`test should render the titlebar with the filter 1`] = `
<table
  className="issue-table">
  <tbody>
    <tr>
      <td>
        <IssueMessage
          message="Reduce the number of conditional operators (4) used in the expression"
          organization="myorg"
          rule="javascript:S1067" />
      </td>
      <td
        className="issue-table-meta-cell issue-table-meta-cell-first">
        <ul
          className="list-inline issue-meta-list">
          <li
            className="issue-meta">
            <IssueChangelog
              creationDate="2017-03-01T09:36:01+0100"
              isOpen={false}
              issue={
                Object {
                  "creationDate": "2017-03-01T09:36:01+0100",
                  "key": "AVsae-CQS-9G3txfbFN2",
                  "line": 26,
                  "message": "Reduce the number of conditional operators (4) used in the expression",
                  "organization": "myorg",
                  "rule": "javascript:S1067",
                }
              }
              onFail={[Function]}
              togglePopup={[Function]} />
          </li>
          <li
            className="issue-meta">
            <span
              className="issue-meta-label"
              title="line_number">
              L
              26
            </span>
          </li>
          <li
            className="issue-meta">
            <a
              className="js-issue-permalink icon-link"
              href="/issues/search#issues=AVsae-CQS-9G3txfbFN2"
              target="_blank" />
          </li>
          <li
            className="issue-meta">
            <button
              aria-label="issue.filter_similar_issues"
              className="js-issue-filter button-link issue-action issue-action-with-options"
              onClick={[Function]}>
              <i
                className="icon-filter icon-half-transparent" />
               
              <i
                className="icon-dropdown" />
            </button>
          </li>
        </ul>
      </td>
    </tr>
  </tbody>
</table>
`;
